// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`import-defer.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
import.defer("./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module");
import.defer(
  // Comment
  "./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module"
)

=====================================output=====================================
import.defer("./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module");
import.defer(
  // Comment
  "./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module"
);

================================================================================
`;

exports[`import-defer.js format[acorn] 1`] = `
"The only valid meta property for import is 'import.meta' (1:8)
> 1 | import.defer("./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module");
    |        ^
  2 | import.defer(
  3 |   // Comment
  4 |   "./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module"
Cause: The only valid meta property for import is 'import.meta' (1:7)"
`;

exports[`import-defer.js format[espree] 1`] = `
"The only valid meta property for import is 'import.meta' (1:8)
> 1 | import.defer("./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module");
    |        ^
  2 | import.defer(
  3 |   // Comment
  4 |   "./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module"
Cause: The only valid meta property for import is 'import.meta'"
`;

exports[`import-defer.js format[flow] 1`] = `
"Unexpected identifier, expected the identifier \`meta\` (1:8)
> 1 | import.defer("./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module");
    |        ^
  2 | import.defer(
  3 |   // Comment
  4 |   "./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module"
Cause: Unexpected identifier, expected the identifier \`meta\` (1:7)"
`;

exports[`import-defer.js format[hermes] 1`] = `
"'meta' expected in member expression (1:8)
> 1 | import.defer("./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module");
    |        ^
  2 | import.defer(
  3 |   // Comment
  4 |   "./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module"
Cause: 'meta' expected in member expression (1:7)
import.defer("./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module");
       ^~~~~
note: start of member expression (1:0)
import.defer("./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module");
^"
`;

exports[`import-defer.js format[meriyah] 1`] = `
"The only valid meta property for import is 'import.meta' (1:8)
> 1 | import.defer("./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module");
    |        ^^^^^
  2 | import.defer(
  3 |   // Comment
  4 |   "./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module"
Cause: [1:7-1:12]: The only valid meta property for import is 'import.meta'"
`;

exports[`import-expression.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
import("./a/long/long/long/long/long/long/long/long/long/long/long/path/to/module")
import(
  // Comment
  "./a/long/long/long/long/long/long/long/long/long/long/long/path/to/module"
)
import.meta.resolve("./a/long/long/long/long/long/long/long/long/long/long/long/path/to/module");

=====================================output=====================================
import("./a/long/long/long/long/long/long/long/long/long/long/long/path/to/module");
import(
  // Comment
  "./a/long/long/long/long/long/long/long/long/long/long/long/path/to/module"
);
import.meta
  .resolve("./a/long/long/long/long/long/long/long/long/long/long/long/path/to/module");

================================================================================
`;

exports[`import-source.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
import.source("./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module");
import.source(
  // Comment
  "./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module"
)

=====================================output=====================================
import.source("./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module");
import.source(
  // Comment
  "./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module"
);

================================================================================
`;

exports[`import-source.js format[acorn] 1`] = `
"The only valid meta property for import is 'import.meta' (1:8)
> 1 | import.source("./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module");
    |        ^
  2 | import.source(
  3 |   // Comment
  4 |   "./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module"
Cause: The only valid meta property for import is 'import.meta' (1:7)"
`;

exports[`import-source.js format[espree] 1`] = `
"The only valid meta property for import is 'import.meta' (1:8)
> 1 | import.source("./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module");
    |        ^
  2 | import.source(
  3 |   // Comment
  4 |   "./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module"
Cause: The only valid meta property for import is 'import.meta'"
`;

exports[`import-source.js format[flow] 1`] = `
"Unexpected identifier, expected the identifier \`meta\` (1:8)
> 1 | import.source("./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module");
    |        ^
  2 | import.source(
  3 |   // Comment
  4 |   "./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module"
Cause: Unexpected identifier, expected the identifier \`meta\` (1:7)"
`;

exports[`import-source.js format[hermes] 1`] = `
"'meta' expected in member expression (1:8)
> 1 | import.source("./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module");
    |        ^
  2 | import.source(
  3 |   // Comment
  4 |   "./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module"
Cause: 'meta' expected in member expression (1:7)
import.source("./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module");
       ^~~~~~
note: start of member expression (1:0)
import.source("./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module");
^"
`;

exports[`import-source.js format[meriyah] 1`] = `
"The only valid meta property for import is 'import.meta' (1:8)
> 1 | import.source("./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module");
    |        ^^^^^^
  2 | import.source(
  3 |   // Comment
  4 |   "./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module"
Cause: [1:7-1:13]: The only valid meta property for import is 'import.meta'"
`;
